# Telephone_DB

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
include/: telephone_info.h
sources/: main.c  telephone_info.c
tests/: tests.cpp
